// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/learn_more_trial_modal/learn_more_trial_modal_step should match snapshot 1`] = `
<ContextProvider
  value={
    Object {
      "getServerState": undefined,
      "identityFunctionCheck": "once",
      "stabilityCheck": "once",
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Object {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <LearnMoreTrialModalStep
    buttonLabel="button"
    description="Step description"
    id="stepId"
    svgElement={<svg />}
    svgWrapperClassName="stepClassname"
    title="Step title"
  />
</ContextProvider>
`;

exports[`components/learn_more_trial_modal/learn_more_trial_modal_step should match snapshot when loaded in cloud workspace 1`] = `
<ContextProvider
  value={
    Object {
      "getServerState": undefined,
      "identityFunctionCheck": "once",
      "stabilityCheck": "once",
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Object {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <LearnMoreTrialModalStep
    bottomLeftMessage="Step bottom message"
    buttonLabel="button"
    description="Step description"
    id="stepId"
    isCloud={true}
    svgElement={<svg />}
    svgWrapperClassName="stepClassname"
    title="Step title"
  />
</ContextProvider>
`;

exports[`components/learn_more_trial_modal/learn_more_trial_modal_step should match snapshot with optional params 1`] = `
<ContextProvider
  value={
    Object {
      "getServerState": undefined,
      "identityFunctionCheck": "once",
      "stabilityCheck": "once",
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Object {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <LearnMoreTrialModalStep
    bottomLeftMessage="Step bottom message"
    buttonLabel="button"
    description="Step description"
    id="stepId"
    svgElement={<svg />}
    svgWrapperClassName="stepClassname"
    title="Step title"
  />
</ContextProvider>
`;
